--- a/src/frontend/styles/companyStyle.css
+++ b/src/frontend/styles/companyStyle.css
@@ -38,7 +38,7 @@ body {
   }
   .h1{
     font-size: 24px;
-    font-family: 
+    font-family: copperplate, sans-serif;
     margin: 0 0 10px;
     border-bottom: 2px solid /*#c0c0c0*/;
     padding-bottom: 5px;
