--- a/src/frontend/views/company.html
+++ b/src/frontend/views/company.html
@@ -105,7 +105,7 @@
 
     <div id="mapContainer">
       <h2>All Stores in the US</h2>
-    <div id="map" style="height: 600; width: 600;">
+    <div id="map">
       
     </div>  
     </div>
