--- a/src/frontend/views/company.html
+++ b/src/frontend/views/company.html
@@ -4,6 +4,8 @@
 //css muss in eine extra datei//-->
 <!--TODO Menu Button in eigenen Container packen-->
 <!--TODO Neon farben für Container festlegen-->
+<!--TODO im Container revenue müssen die angeklickten stores weiß 
+und die nicht angeklickten grau sein (aktuell andersrum)-->
 <head>
   <meta charset="UTF-8" />
  
