--- a/src/frontend/styles/companyStyle.css
+++ b/src/frontend/styles/companyStyle.css
@@ -1,20 +1,63 @@
+/* General body styling */
 body {
   background-color: black;
   color: white;
 }
 
-#tooltip{
+/* Button Container */
+.button-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 10px; /* Space between buttons */
+  margin-bottom: 20px;
+}
+
+/* Button Group */
+.button-group {
+  display: flex;
+  gap: 10px;
+}
+
+/* Button styling */
+.button-group button,
+.customdate button {
+  width: 100px; /* Set a fixed width */
+  height: 40px; /* Set a fixed height */
+  background-color: #FF4500;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-weight: 600;
+  font-size: 14px; /* Adjust font size */
+  text-align: center;
+  cursor: pointer;
+}
+
+/* Custom Date Container */
+.customdate {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+/* Active button styling */
+.active {
+  background-color: #FF6347;
+}
+
+/* Tooltip styling */
+#tooltip {
   position: relative;
   cursor: pointer;
-  border-bottom: 2x dotted;
+  border-bottom: 2px dotted;
   padding: 7px;
   font-size: 25px;
   font-weight: bold;
   font-family: sans-serif;
-
 }
 
-#tooltipText{ 
+#tooltipText {
   position: absolute;
   left: 50%;
   top: 0%;
@@ -28,155 +71,137 @@ body {
   opacity: 0;
   transition: opacity 0.5s ease;
 }
-#tooltipText::before{ 
+
+#tooltipText::before {
   content: "";
   position: absolute;
-  left : 50%;
-  top : 100%;
+  left: 50%;
+  top: 100%;
   transform: translateX(-50%);
-  border : 15px solid;
-  border-color: #000 #0000 #0000 #0000;
+  border: 15px solid;
+  border-color: #000 transparent transparent transparent;
 }
 
-#tooltip:hover #tooltipText{
-  top : 130%;
+#tooltip:hover #tooltipText {
+  top: 130%;
   visibility: visible;
   opacity: 1;
 }
 
+/* Chart container styling */
+.chart-container {
+  display: flex;
+  justify-content: space-between;
+}
 
-/*sorgt dafür, dass der angeklickte Button rot ist*/
-.active {
-    background-color: red;
-  }
+.chart {
+  width: 48%;
+}
 
-  .chart-container {
-    display: flex;
-    justify-content: space-between;
-  }
+/* Dashboard container styling */
+#dashboardContainer {
+  margin-top: 20px;
+  border: 2px solid #3a3a3a;
+  border-radius: 10px;
+  padding: 10px;
+  background-color: black;
+}
 
-  .chart {
-    width: 48%;
-  }
-  #dashboardContainer {
-    margin-top: 20px;
-    border: 2px solid #3a3a3a;
-    border-radius: 10px;
-    padding: 10px;
-    background-color: black /*#f0f0f0*/;
-  }
-  #dashboard {
-    display: flex;
-    justify-content: space-between;
-    gap: 10px;
-    flex-wrap: wrap;
-  }
-  /*Pizza Franchise Title*/
-  #pizzaFranchiseTitle {
-    text-align: center;
-    font-size: 24px;
-    font-family: copperplate, sans-serif;
-    margin: 0 0 10px;
-    border-bottom: 2px solid /*#c0c0c0*/;
-    padding-bottom: 5px;
-  }
-  .h1{
-    font-size: 24px;
-    font-family: copperplate, sans-serif;
-    margin: 0 0 10px;
-    border-bottom: 2px solid /*#c0c0c0*/;
-    padding-bottom: 5px;
-  }
-  /*generalStatsContainer*/
-  #generalStatsContainer {
-    margin-top: 20px;
-    border: 2px solid #3a3a3a;
-    border-radius: 10px;
-    padding: 10px;
-    background-color: black /*#f0f0f0*/;
-  }
-  #generalStats {
-    display: flex;
-    justify-content: space-between;
-    gap: 10px;
-    flex-wrap: wrap;
-  }
-  #generalStatsTitle {
-    text-align: center;
-    font-size: 24px;
-    margin: 0 0 10px;
-    border-bottom: 2px solid /*#c0c0c0*/;
-    padding-bottom: 5px;
-  }
+#dashboard {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+#pizzaFranchiseTitle,
+.h1 {
+  text-align: center;
+  font-size: 24px;
+  font-family: copperplate, sans-serif;
+  margin: 0 0 10px;
+  border-bottom: 2px solid;
+  padding-bottom: 5px;
+}
+
+/* General stats container styling */
+#generalStatsContainer {
+  margin-top: 20px;
+  border: 2px solid #3a3a3a;
+  border-radius: 10px;
+  padding: 10px;
+  background-color: black;
+}
+
+#generalStats {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+#generalStatsTitle {
+  text-align: center;
+  font-size: 24px;
+  margin: 0 0 10px;
+  border-bottom: 2px solid;
+  padding-bottom: 5px;
+}
 
 #statsOverviewContainer {
-    margin-top: 20px;
-    border: 2px solid #3a3a3a;
-    border-radius: 10px;
-    padding: 10px;
-    background-color: black /*#f0f0f0*/;
-  }
+  margin-top: 20px;
+  border: 2px solid #3a3a3a;
+  border-radius: 10px;
+  padding: 10px;
+  background-color: black;
+}
 
-  #statsOverview {
-    display: flex;
-    justify-content: space-between;
-    gap: 10px;
-    flex-wrap: wrap;
-  } 
+#statsOverview {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  flex-wrap: wrap;
+}
 
-  .stat-item {
-    background-color: black/*#f0f0f0*/;
-    padding: 10px;
-    border-radius: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    flex: 1;
-    min-width: 150px;
-    text-align: center;
-  }
+.stat-item {
+  background-color: black;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  flex: 1;
+  min-width: 150px;
+  text-align: center;
+}
 
-  .stat-item h3 {
-    margin: 0;
-    font-size: 18px;
-  }
+.stat-item h3 {
+  margin: 0;
+  font-size: 18px;
+}
 
-  .stat-item p {
-    margin: 5px 0 0;
-    font-size: 14px;
-  }
+.stat-item p {
+  margin: 5px 0 0;
+  font-size: 14px;
+}
 
-  .customdate {
-    margin-top: 20px;
-  }
+.customdate {
+  margin-top: 20px;
+}
 
-  #statsOverviewTitle {
-    text-align: center;
-    font-size: 24px;
-    margin: 0 0 10px;
-    border-bottom: 2px solid /*#c0c0c0*/;
-    padding-bottom: 5px;
-  }
+#statsOverviewTitle {
+  text-align: center;
+  font-size: 24px;
+  margin: 0 0 10px;
+  border-bottom: 2px solid;
+  padding-bottom: 5px;
+}
 
-  .button-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .button-group {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-    flex-wrap: wrap;
-    margin-bottom: 20px;
-  }
-
-/*General Revenue Container*/
+/* General revenue container styling */
 #generalRevenueContainer {
   margin-top: 20px;
   border: 2px solid #3a3a3a;
   border-radius: 10px;
   padding: 10px;
-  background-color: black /*#f0f0f0*/;
+  background-color: black;
 }
 
 #generalRevenue {
@@ -184,17 +209,16 @@ body {
   justify-content: space-between;
   gap: 10px;
   flex-wrap: wrap;
-} 
+}
+
 #generalRevenueTitle {
   text-align: center;
   font-size: 24px;
   margin: 0 0 10px;
-  border-bottom: 2px solid /*#c0c0c0*/;
+  border-bottom: 2px solid;
   padding-bottom: 5px;
-  ;
 }
 
-/*Revenue Container*/
 #revenueWrapper {
   display: flex;
   justify-content: space-between;
@@ -203,20 +227,20 @@ body {
   box-sizing: border-box;
 }
 
-#revenueContainer, #revenueBarContainer {
+#revenueContainer,
+#revenueBarContainer {
   flex: 1;
   margin-top: 20px;
   border: 2px solid #3a3a3a;
   border-radius: 10px;
   padding: 10px;
-  background-color: black; /* #f0f0f0 for a light grey background */
+  background-color: black;
   box-sizing: border-box;
 }
 
 #revenue {
   width: 100%;
   height: 600px;
-  
 }
 
 #revenueBar {
@@ -224,15 +248,12 @@ body {
   height: 600px;
 }
 
-
-
-  /*Map view of all Stores*/
 #sector3Container {
   margin-top: 20px;
   border: 2px solid #c0c0c0;
   border-radius: 10px;
   padding: 10px;
-  background-color: #b3b3b3 /*#f0f0f0*/;
+  background-color: #b3b3b3;
   width: 100%;
   box-sizing: border-box;
 }
@@ -241,7 +262,7 @@ body {
   text-align: center;
   font-size: 24px;
   margin: 0 0 10px;
-  border-bottom: 2px solid /*#c0c0c0*/;
+  border-bottom: 2px solid;
   padding-bottom: 5px;
 }
 
@@ -249,7 +270,7 @@ body {
   display: flex;
   justify-content: space-between;
   gap: 10px;
-  flex-wrap: wrap; /* This will allow the containers to wrap to the next line if they overflow */
+  flex-wrap: wrap;
   width: 100%;
   box-sizing: border-box;
 }
@@ -259,8 +280,8 @@ body {
   border: 2px solid #3a3a3a;
   border-radius: 10px;
   padding: 10px;
-  background-color: black; /* #f0f0f0 for a light grey background */
-  flex: 1; /* This will make the containers flexible and take equal space */
+  background-color: black;
+  flex: 1;
   box-sizing: border-box;
 }
 
@@ -268,11 +289,9 @@ body {
   text-align: center;
   font-size: 24px;
   margin: 0 0 10px;
-  border-bottom: 2px solid #c0c0c0; /* Uncomment if you want a border */
+  border-bottom: 2px solid #c0c0c0;
   padding-bottom: 5px;
 }
-
-
 
 #mapContainer {
   margin-top: 20px;
@@ -283,6 +302,7 @@ body {
   width: 100%;
   box-sizing: border-box;
 }
+
 #map {
   width: 100%;
   height: 4000px;
