--- a/src/frontend/views/company.html
+++ b/src/frontend/views/company.html
@@ -6,6 +6,7 @@
 <!--TODO Neon farben für Container festlegen-->
 <!--TODO im Container revenue müssen die angeklickten stores weiß 
 und die nicht angeklickten grau sein (aktuell andersrum)-->
+<!--TODO farben in den revenue Graphen sollen festgelegt sein-->
 <head>
   <meta charset="UTF-8" />
  
