--- a/src/frontend/views/individualStore.html
+++ b/src/frontend/views/individualStore.html
@@ -16,8 +16,8 @@
   <script type="text/javascript" src="/static/UI/buttons.js"></script>
  <style>
   #dashboardContainer {width: 1000px;height: 150px;}
-  #statsOverviewContainer {width: 1000px; height: 150px;}
-  #qualityContainer {width: 600px; height: 500px;}
+  #statsOverviewContainer {width: 100%; height: 150px;}
+  #qualityContainer {width: 600px; height: 600px;}
   #pizzaSizeContainer {width: 400px; height: 500px;}
   #abcContainer {width: 600px; height: 700px;}
   #pizzaIngredientsContainer {width: 600px; height: 700px;}
