--- a/src/frontend/styles/individualStyle.css
+++ b/src/frontend/styles/individualStyle.css
@@ -1,9 +1,7 @@
 body {
-  background-color: black;
+  background-color: #1B1B1B;
   color: white;
 }
-
-
 
 #qualityC,
 #Store-revenueC,
@@ -36,7 +34,6 @@ body {
   border: 2px solid #c0c0c0;
   border-radius: 10px;
   padding: 10px;
-  background-color: #ffffff /*#f0f0f0*/;
 }
 #dashboard {
   display: flex;
@@ -58,7 +55,6 @@ body {
   border: 2px solid #c0c0c0;
   border-radius: 10px;
   padding: 10px;
-  background-color: #f9f9f9;
 }
 
 #statsOverview {
@@ -77,7 +73,6 @@ body {
 }
 
 .stat-item {
-  background-color: #f0f0f0;
   padding: 10px;
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
@@ -101,7 +96,6 @@ body {
     border: 2px solid #c0c0c0;
     border-radius: 10px;
     padding: 10px;
-    background-color: #ffffff /*#f0f0f0*/;
 }
 
 #quality {
@@ -124,7 +118,6 @@ body {
   border: 2px solid #c0c0c0;
   border-radius: 10px;
   padding: 10px;
-  background-color: #ffffff /*#f0f0f0*/;
 }
 
 #Store-revenue {
@@ -147,7 +140,6 @@ body {
   border: 2px solid #c0c0c0;
   border-radius: 10px;
   padding: 10px;
-  background-color: #ffffff /*#f0f0f0*/;
 }
 
 #heatmap {
@@ -170,13 +162,11 @@ body {
   border: 2px solid #c0c0c0;
   border-radius: 10px;
   padding: 10px;
-  background-color: #ffffff /*#f0f0f0*/;
 }
 
 #PizzaSize {
   width: 100%;
   height: 100%;
-  outline: 4px solid rgb(116, 116, 116);
 }
 
 #pizzaSizeTitle {
@@ -192,13 +182,11 @@ body {
   border: 2px solid #c0c0c0;
   border-radius: 10px;
   padding: 10px;
-  background-color: #ffffff /*#f0f0f0*/;
 }
 
 #abc {
   width: 100%;
   height: 100%;
-  outline: 4px solid rgb(116, 116, 116);
 }
 
 #abcTitle {
@@ -214,13 +202,11 @@ body {
   border: 2px solid #c0c0c0;
   border-radius: 10px;
   padding: 10px;
-  background-color: #ffffff /*#f0f0f0*/;
 }
 
 #PizzaIngredients {
   width: 100%;
   height: 100%;
-  outline: 4px solid rgb(116, 116, 116);
 }
 
 #pizzaIngredientsTitle {
