--- a/src/frontend/views/company.html
+++ b/src/frontend/views/company.html
@@ -51,8 +51,7 @@ und die nicht angeklickten grau sein (aktuell andersrum)-->
     <header>
       <input type="checkbox" id="nav_check" hidden>
       <nav>
-          <ul>
-              
+          <ul class="menu-container">
           </ul>
       </nav>
       <div id="mapS"></div>
