--- a/src/frontend/views/individualStore.html
+++ b/src/frontend/views/individualStore.html
@@ -30,7 +30,7 @@
     <h1 id="dashboardTitle">@Pizza Hub - Store ID: </h1>
     <input type="checkbox" id="nav_check" hidden>
     <nav>
-      <ul>
+      <ul class="menu-container">
         <!-- Store items will be populated here -->
       </ul>
     </nav>
