--- a/src/frontend/styles/companyStyle.css
+++ b/src/frontend/styles/companyStyle.css
@@ -98,6 +98,17 @@ body {
   width: 48%;
 }
 
+.card {
+  background-color: #444;
+  border-radius: 10px;
+  padding: 20px;
+  width: 200px;
+  text-align: center;
+}
+.icon {
+  font-size: 2em;
+}
+
 /* Dashboard container styling */
 #dashboardContainer {
   margin-top: 20px;
@@ -144,7 +155,6 @@ body {
   text-align: center;
   font-size: 24px;
   margin: 0 0 10px;
-  border-bottom: 2px solid;
   padding-bottom: 5px;
 }
 
@@ -213,9 +223,7 @@ body {
 
 #generalRevenueTitle {
   text-align: center;
-  font-size: 24px;
   margin: 0 0 10px;
-  border-bottom: 2px solid;
   padding-bottom: 5px;
 }
 
@@ -234,7 +242,6 @@ body {
   border: 2px solid #3a3a3a;
   border-radius: 10px;
   padding: 10px;
-  
   box-sizing: border-box;
 }
 
@@ -253,7 +260,6 @@ body {
   border: 2px solid #c0c0c0;
   border-radius: 10px;
   padding: 10px;
-  background-color: #b3b3b3;
   width: 100%;
   box-sizing: border-box;
 }
@@ -280,7 +286,6 @@ body {
   border: 2px solid #3a3a3a;
   border-radius: 10px;
   padding: 10px;
-  
   flex: 1;
   box-sizing: border-box;
 }
@@ -298,7 +303,6 @@ body {
   border: 2px solid #3a3a3a;
   border-radius: 10px;
   padding: 10px;
-  
   width: 100%;
   box-sizing: border-box;
 }
