--- a/src/frontend/views/individualStore.html
+++ b/src/frontend/views/individualStore.html
@@ -91,7 +91,7 @@
 
   <div id="abcContainer">
     <h1>ABC Analysis</h1>
-    <div id="abc" style="width: 600px; height: 600px">
+    <div id="abcAnalysis_customer_1" style="width: 600px; height: 600px">
     </div>
   </div>
 
@@ -129,7 +129,7 @@
 
   pizzaSize();
 
-  abcAnalysis();
+  abcAnalysis_customer_1();
 
   pizzaIngredients();
 
