Second abcAnalysis_customer chart

--- a/src/frontend/views/individualStore.html
+++ b/src/frontend/views/individualStore.html
@@ -90,10 +90,17 @@
   </div>
 
   <div id="abcContainer">
-    <h1>ABC Analysis</h1>
+    <h1>ABC Analysis Customer 1</h1>
     <div id="abcAnalysis_customer_1" style="width: 600px; height: 600px">
     </div>
   </div>
+
+  <div id="abcContainer">
+    <h1>ABC Analysis Customer 2</h1>
+    <div id="abcAnalysis_customer_2" style="width: 600px; height: 600px">
+    </div>
+  </div>
+
 
   <div id="pizzaIngredientsContainer">
     <h1>Ingredient Consumption in kg per Week</h1>
@@ -130,6 +137,7 @@
   pizzaSize();
 
   abcAnalysis_customer_1();
+  abcAnalysis_customer_2();
 
   pizzaIngredients();
 
