ABC-Analysis Pizza Chart 1

--- a/src/frontend/views/individualStore.html
+++ b/src/frontend/views/individualStore.html
@@ -101,6 +101,12 @@
     </div>
   </div>
 
+  <div id="abcContainer">
+    <h1>ABC Analysis Pizza 1</h1>
+    <div id="abcAnalysis_pizza_1" style="width: 600px; height: 600px">
+    </div>
+  </div>
+
 
   <div id="pizzaIngredientsContainer">
     <h1>Ingredient Consumption in kg per Week</h1>
@@ -138,6 +144,8 @@
 
   abcAnalysis_customer_1();
   abcAnalysis_customer_2();
+
+  abcAnalysis_pizza_1();
 
   pizzaIngredients();
 
